# Yggdrasil_GIT_Repo

./: .gitattributes  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  Test.md  pyproject.toml  requirements-gui.txt
config/: default_config.yaml
docs/: GUI_INFO.md  GUI_INTRO.md  GUI_PLAN.md  backend.puml  frontend.puml  kinematikk.md  stewart_platform.puml  stewart_platform_V1.puml  stewart_platform_V2.puml  stewart_platform_V3.puml  stewart_platform_updated.puml  terminalguide.md
firmware/: knappekort.ino
scripts/: boundary_tour.py  bringup_imu.py  bringup_one_servo.py  bringup_pca9685.py  check_home_geometry.py  home_all_servos.py  scripts_documentasjon.md  sweep_all_servos.py  test_servo_sweep.py  visualiser_geometri.py
stewart_platform/: __init__.py
stewart_platform/config/: __init__.py  button_config.py  platform_config.py
stewart_platform/control/: __init__.py  imu_fusion.py  motion_controller.py  pid_controller.py  pose_controller.py
stewart_platform/geometry/: __init__.py  platform_geometry.py  pose.py  vector3.py
tests/: conftest.py  test_config_platform_config.py  test_control_imu_fusion.py  test_control_motion_controller.py  test_control_pid_controller.py  test_control_pose_controller.py  test_geometry_platform_geometry.py  test_geometry_pose.py  test_geometry_vector3.py  test_gui_bridge_controller_bridge.py  test_gui_bridge_polling_worker.py  test_gui_focus_manager.py  test_hardware_button_interface.py  test_hardware_imu_interface.py  test_kinematics_inverse_kinematics.py  test_safety_safety_monitor.py  test_servo_servo.py
(+64 files in other folders)
